Fix style on firefox

--- a/css/index.styl
+++ b/css/index.styl
@@ -69,6 +69,10 @@
 .team-form .combobox-container .btn
   vertical-align: top
 
+.combobox-container:before, .combobox-container:after
+  content: ""
+  display: inline
+
 .datePicker-container
   width: auto;
   min-width: 16px;
